--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="sweatshirt.jpg" alt="">
+                    <img src="Daniel.jpg" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
