--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                   <p>My name is Ndukuba Daniel Elochukwu. I'm a passionate frontend developer,
+                    <p>My name is Ndukuba Daniel Elochukwu. I am a passionate frontend developer,
                      with a knack for turning complex ideas into accessible experiences. I
                       love the thrill of seeing your code come to life on your screen.
-                    Outside of work, I'm equally creative, perhaps with instances of playing 
+                    Outside of work, I am equally creative, perhaps with instances of playing 
                     football and artistic experiments. I'm always up for a friendly debate,
                      and from my friends' points of view, I'd sum up my general attributes
                       to passionate, funny and positively sentimental.</p>
